--- a/src/App.css
+++ b/src/App.css
@@ -120,13 +120,33 @@ body {
     grid-template-columns: repeat(1, 1fr);
   }
   .menu-bar {
-    flex-direction: column;
-    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 0;
+    flex-wrap: nowrap;
   }
   .menu-bar div {
-    width: 100%;
-    justify-content: center;
+    width: auto !important;
+  display: flex;
+  align-items: center !important;
+  flex-direction: column;
   }
+  .menu-item {
+    font-size: 12px !important; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+  }
+
+  .menu-icon svg {
+    width: 20px !important; 
+    height: 20px !important;
+  }
+  .menu-item:nth-child(3) { 
+    font-size: 10px;
+  }
+
   .next-button {
     width: 90%;
     font-size: 16px;
@@ -176,4 +196,20 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;     
+}
+
+.menu-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #555;
+  font-weight: normal;
+  cursor: pointer;
+  flex: 1;
+  justify-content: center;
+  text-align: center;
+}
+.menu-item.highlight {
+  color: #EFB036 !important;
+  font-weight: bold;
 }
